--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,6 +4,8 @@ description: A new Flutter project.
 dependencies:
   flutter:
     sdk: flutter
+
+  http: any
   shared_preferences: 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
