--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -28,7 +28,7 @@ android {
     
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.naide.aru"
+        applicationId "moe.naide.aru"
         minSdkVersion 16
         targetSdkVersion 27
         versionCode 1
@@ -63,3 +63,4 @@ dependencies {
     androidTestCompile 'com.android.support.test:runner:0.5'
     androidTestCompile 'com.android.support.test:rules:0.5'
 }
+apply plugin: 'com.google.gms.google-services'
