--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ android:
   components:
     - tools
     - platform-tools
-    - build-tools-25.0.3
-    - android-25
+    - build-tools-26.0.2
+    - android-27
     - sys-img-armeabi-v7a-google_apis-25
     - extra-android-m2repository
     - extra-google-m2repository
@@ -26,11 +26,14 @@ addons:
       - libstdc++6
       - fonts-droid
 before_script:
-  - wget http://services.gradle.org/distributions/gradle-3.5-bin.zip
-  - unzip -qq gradle-3.5-bin.zip
-  - export GRADLE_HOME=$PWD/gradle-3.5
-  - export PATH=$GRADLE_HOME/bin:$PATH
-  - git clone https://github.com/flutter/flutter.git -b master --depth 1
+  # - wget http://services.gradle.org/distributions/gradle-3.5-bin.zip
+  # - unzip -qq gradle-3.5-bin.zip
+  # - export GRADLE_HOME=$PWD/gradle-3.5
+  # - export PATH=$GRADLE_HOME/bin:$PATH
+  - git clone https://github.com/flutter/flutter.git -b master
+  - ./flutter/bin/flutter channel master
+  - ./flutter/bin/flutter doctor -v
+  - ./flutter/bin/flutter upgrade
 script:
   - ./flutter/bin/flutter -v build apk
 
