--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ before_script:
   - export PATH=$GRADLE_HOME/bin:$PATH
   - git clone https://github.com/flutter/flutter.git -b master --depth 1
   - ./flutter/bin/flutter channel master
+  - ./flutter/bin/flutter doctor 
 script:
   - ./flutter/bin/flutter -v build apk
 
