--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ before_script:
   - git clone https://github.com/flutter/flutter.git -b master --depth 1
   - ./flutter/bin/flutter channel master
   - ./flutter/bin/flutter doctor -v
-  - ./flutter/bin/flutter packages get
+  - ./flutter/bin/flutter upgrade
 script:
   - ./flutter/bin/flutter -v build apk
 
