--- a/.travis.yml
+++ b/.travis.yml
@@ -26,10 +26,10 @@ addons:
       - libstdc++6
       - fonts-droid
 before_script:
-  - wget http://services.gradle.org/distributions/gradle-3.5-bin.zip
-  - unzip -qq gradle-3.5-bin.zip
-  - export GRADLE_HOME=$PWD/gradle-3.5
-  - export PATH=$GRADLE_HOME/bin:$PATH
+  # - wget http://services.gradle.org/distributions/gradle-3.5-bin.zip
+  # - unzip -qq gradle-3.5-bin.zip
+  # - export GRADLE_HOME=$PWD/gradle-3.5
+  # - export PATH=$GRADLE_HOME/bin:$PATH
   - git clone https://github.com/flutter/flutter.git -b master
   - ./flutter/bin/flutter channel master
   - ./flutter/bin/flutter doctor -v
