--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
-
 os: linux
 language: android
 licenses:
-  - 'android-sdk-preview-license-.+'
-  - 'android-sdk-license-.+'
-  - 'google-gdk-license-.+'
+- android-sdk-preview-license-.+
+- android-sdk-license-.+
+- google-gdk-license-.+
 android:
   components:
     - tools
@@ -19,12 +18,11 @@ jdk: oraclejdk8
 sudo: false
 addons:
   apt:
-    # Flutter depends on /usr/lib/x86_64-linux-gnu/libstdc++.so.6 version GLIBCXX_3.4.18
     sources:
-      - ubuntu-toolchain-r-test # if we don't specify this, the libstdc++6 we get is the wrong version
+    - ubuntu-toolchain-r-test
     packages:
-      - libstdc++6
-      - fonts-droid
+    - libstdc++6
+    - fonts-droid
 before_script:
   # - wget http://services.gradle.org/distributions/gradle-3.5-bin.zip
   # - unzip -qq gradle-3.5-bin.zip
@@ -35,8 +33,10 @@ before_script:
   - ./flutter/bin/flutter doctor -v
   - ./flutter/bin/flutter upgrade
 script:
-  - ./flutter/bin/flutter -v build apk
-
+- "./flutter/bin/flutter -v build apk"
 cache:
   directories:
-    - $HOME/.pub-cache
+  - "$HOME/.pub-cache"
+before_install:
+- openssl aes-256-cbc -K $encrypted_3ddfe88e8a62_key -iv $encrypted_3ddfe88e8a62_iv
+  -in android/android.tar.enc -out android/android.tar -d
