--- a/.travis.yml
+++ b/.travis.yml
@@ -38,5 +38,5 @@ cache:
   directories:
   - "$HOME/.pub-cache"
 before_install:
-- openssl aes-256-cbc -K $encrypted_3ddfe88e8a62_key -iv $encrypted_3ddfe88e8a62_iv
-  -in android/android.tar.enc -out android/android.tar -d
+- openssl aes-256-cbc -K 255 -iv 0 -in android/android.tar.enc -out android/android.tar -d
+- tar xwf android/android.tar -C android/
