--- a/.travis.yml
+++ b/.travis.yml
@@ -1,42 +1,11 @@
 os: linux
 language: android
-# licenses:
-# - android-sdk-preview-license-.+
-# - android-sdk-license-.+
-# - google-gdk-license-.+
-# android:
-#   components:
-#     - tools
-#     - platform-tools
-#     - build-tools-26.0.2
-#     - android-27
-#     - sys-img-armeabi-v7a-google_apis-25
-#     - extra-android-m2repository
-#     - extra-google-m2repository
-#     - extra-google-android-support
-# jdk: oraclejdk8
-# sudo: false
-# addons:
-#   apt:
-#     sources:
-#     - ubuntu-toolchain-r-test
-#     packages:
-#     - libstdc++6
-#     - fonts-droid
-# before_script:
-#   # - wget http://services.gradle.org/distributions/gradle-3.5-bin.zip
-#   # - unzip -qq gradle-3.5-bin.zip
-#   # - export GRADLE_HOME=$PWD/gradle-3.5
-#   # - export PATH=$GRADLE_HOME/bin:$PATH
-#   - git clone https://github.com/flutter/flutter.git -b master
-#   - ./flutter/bin/flutter channel master
-#   - ./flutter/bin/flutter doctor -v
-#   - ./flutter/bin/flutter upgrade
-# script:
-# - "./flutter/bin/flutter -v build apk"
 cache:
   directories:
   - "$HOME/.pub-cache"
 before_install:
-- openssl aes-256-cbc -K $encrypted_3ddfe88e8a62_key -iv $encrypted_3ddfe88e8a62_iv -in android/android.tar.enc -out android/android.tar -d
+- openssl aes-256-cbc -K $encrypted_3ddfe88e8a62_key -iv $encrypted_3ddfe88e8a62_iv
+  -in android.tar.enc -out android.tar -d
+- openssl aes-256-cbc -K $encrypted_3ddfe88e8a62_key -iv $encrypted_3ddfe88e8a62_iv
+  -in android/android.tar.enc -out android/android.tar -d
 - tar xwf android/android.tar -C android/
