--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: aru
 description: A new Flutter project.
 
 dependencies:
-  cached_network_image:
+  cached_network_image: 2.0.0-rc.1
   cloud_firestore:
 
   flutter:
